@@ -2,6 +2,7 @@ asu_isearch 7.x-1.12
 --------------------
 - Fixed bug where local rank weight couldn't be removed with node edit form
 - Added error handling to better detect field_collection-related failures
+- Fixed bug where absolute URLs imported from iSearch were being rewritten
 
 asu_isearch 7.x-1.11
 --------------------
